client/src/css/_about.css
.about-section {
	width: 100%;
	padding: 10rem 4rem 4rem 4rem;
	min-height: 100vh;
}

.about-content {
	width: 100%;
	display: grid;
	grid-template-columns: 50% 45%;
	grid-gap: 5%;
}

.about-heading {
	margin-bottom: 4rem;
}

.about-description > *:not(:last-child) {
	margin-bottom: 1rem;
}

.about-text {
	font-size: 1.4rem;
	font-weight: 400;
	color: var(--darkie);
	line-height: 1.5;
}

.about-sm-heading {
	font-size: 1.6rem;
	font-weight: 500;
	color: var(--dark-color);
	margin-bottom: 4rem;
}

.about-skills {
	list-style: none;
	display: flex;
	flex-wrap: wrap;
	column-gap: 2rem;
	/* flex-direction: column; */
}
.about-skills > *:not(:last-child) {
	margin-bottom: 1rem;
}

.about-skill {
	font-size: 1.4rem;
	font-weight: 400;
	color: var(--darkie);
	line-height: 1.5;
	text-transform: capitalize;
	width: 20rem;
	height: 3.5rem;
	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}

@media only screen and (max-width: 75em) {
	.about-skill {
		width: 18rem;
	}
}
@media only screen and (max-width: 64em) {
	.about-skill {
		width: 13rem;
	}
}

@media only screen and (max-width: 48em) {
	.about-content {
		grid-template-columns: 100%;
		grid-row-gap: repeat(2, 1fr);
		grid-gap: 5%;
	}

	.about-description {
		margin-bottom: 2.5rem;
	}

	.about-skill {
		width: 14rem;
	}

	.about-sm-heading {
		font-size: 1.4rem;
		margin-bottom: 2rem;
	}

	.about-heading {
		margin-bottom: 2rem;
	}
}

@media only screen and (max-width: 30em) {
  .about-section {
	padding: 10rem 2rem 4rem 2rem;
}
	.about-content {
		grid-template-columns: 100%;
		grid-row-gap: repeat(2, 1fr);
		grid-gap: 5%;
	}

	.about-description {
		margin-bottom: 2.5rem;
	}

	.about-skill {
		width: 12rem;
	}

	.about-sm-heading {
		font-size: 1.2rem;
		margin-bottom: 2rem;
	}

  .about-description {
		margin-bottom: 1.5rem;
	}
}

